--- a/src/app/pages/categorias/categoria-list/categoria-list.page.html
+++ b/src/app/pages/categorias/categoria-list/categoria-list.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/home"></ion-back-button>
+      <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>{{ getString('labels.categorias') }}</ion-title>
     <ion-buttons slot="end">
