Atualiza a configuração do aplicativo, adiciona suporte para notas, e melhora a exibição de categorias e projetos. Inclui novas rotas para notas, otimizações de carregamento e ajustes estéticos na interface.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,6 +41,13 @@
             <ion-label>Categorias</ion-label>
           </ion-item>
         </ion-menu-toggle>
+
+        <ion-menu-toggle auto-hide="true">
+          <ion-item button routerLink="/notas" routerDirection="root">
+            <ion-icon slot="start" name="document-text"></ion-icon>
+            <ion-label>Notas</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
       </ion-list>
     </ion-content>
   </ion-menu>
